--- a/web/style.css
+++ b/web/style.css
@@ -54,11 +54,17 @@ body, html {
     width: 100%;
     height: 100%;
 }
-#backgroundIcons {
+#qrAndIcons {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+#remoteUrlQR {
+    position: absolute;
+    bottom: 100px;
+    right: 340px;
+    box-shadow: 5px 5px 12px -8px black;
 }
 .qrborder {
     border-style: solid;
